# trab2_persistencia2025

./: .gitignore  README.md  database.db  database.py  main.py  pyproject.toml  seed.py
modelos/: adocao.py  atendente.py
routes/: adocao.py  adotante.py  animal.py  atendente.py
